Added DTOs and modifications in Services and Controllers